# tracklib-rwgps

./: .gitignore  Cargo.toml  Gemfile  README  Rakefile  default.nix  tracklib-rwgps.gemspec  tracklib_rwgps.gemspec
lib/: tracklib-rwgps.rb  tracklib_rwgps.rb
lib/tracklib_rwgps/: version.rb
spec/: polyline_spec.rb  simplify_spec.rb  spec_helper.rb  surface_spec.rb
src/: geometry.rs  lib.rs
src/polyline/: ruby.rs  rust.rs
src/simplify/: mod.rs  ruby.rs  rust.rs
src/surface/: ruby.rs  rust.rs
