[package]
name = "tracklib_rwgps"
version = "2.0.2"
authors = ["Dan Larkin <dan@danlarkin.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10"
lazy_static = "1.4"
ruby_tracklib = { git = "https://github.com/ridewithgps/tracklib.git", branch = "tracklib2" }
rutie = "0.8"
tracklib = { git = "https://github.com/ridewithgps/tracklib.git", branch = "tracklib2" }
